docs/api/qiskit/0.29/qiskit.circuit.library.TdgGate.mdx
---
title: TdgGate (v0.29)
description: API reference for qiskit.circuit.library.TdgGate in qiskit v0.29
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.TdgGate
---

# TdgGate

<Class id="qiskit.circuit.library.TdgGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/circuit/library/standard_gates/t.py" signature="TdgGate(label=None)" modifiers="class">
  Bases: `qiskit.circuit.gate.Gate`

  Single qubit T-adjoint gate (\~Z\*\*0.25).

  It induces a $-\pi/4$ phase.

  This is a non-Clifford gate and a fourth-root of Pauli-Z.

  **Matrix Representation:**

$$
\begin{split}Tdg = \begin{pmatrix}
1 & 0 \\
0 & e^{-i\pi/4}
\end{pmatrix}\end{split}
$$

  **Circuit symbol:**

  ```python
       ┌─────┐
  q_0: ┤ Tdg ├
       └─────┘
  ```

  Equivalent to a $\pi/2$ radian rotation about the Z axis.

  Create new Tdg gate.

  ## Methods Defined Here

  <span id="qiskit-circuit-library-tdggate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.TdgGate.inverse" signature="TdgGate.inverse()">
    Return inverse Tdg gate (i.e. T).
  </Function>

  ## Attributes

  ### decompositions

  <Attribute id="qiskit.circuit.library.TdgGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.TdgGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.TdgGate.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.TdgGate.label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.TdgGate.params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.TdgGate.unit">
    Get the time unit of duration.
  </Attribute>
</Class>

