docs/api/qiskit/0.37/qiskit.circuit.library.TdgGate.mdx
---
title: TdgGate
description: API reference for qiskit.circuit.library.TdgGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.TdgGate
---

# TdgGate

<Class id="qiskit.circuit.library.TdgGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/circuit/library/standard_gates/t.py" signature="TdgGate(label=None)">
  Bases: [`qiskit.circuit.gate.Gate`](qiskit.circuit.Gate "qiskit.circuit.gate.Gate")

  Single qubit T-adjoint gate (\~Z\*\*0.25).

  It induces a $-\pi/4$ phase.

  This is a non-Clifford gate and a fourth-root of Pauli-Z.

  Can be applied to a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") with the [`tdg()`](qiskit.circuit.QuantumCircuit#tdg "qiskit.circuit.QuantumCircuit.tdg") method.

  **Matrix Representation:**

$$
\begin{split}Tdg = \begin{pmatrix}
1 & 0 \\
0 & e^{-i\pi/4}
\end{pmatrix}\end{split}
$$

  **Circuit symbol:**

  ```python
       ┌─────┐
  q_0: ┤ Tdg ├
       └─────┘
  ```

  Equivalent to a $-\pi/4$ radian rotation about the Z axis.

  Create new Tdg gate.

  ## Methods Defined Here

  ### inverse

  <Function id="qiskit.circuit.library.TdgGate.inverse" name="inverse" signature="TdgGate.inverse()">
    Return inverse Tdg gate (i.e. T).
  </Function>

  ## Attributes

  ### condition\_bits

  <Attribute id="qiskit.circuit.library.TdgGate.condition_bits" name="condition_bits">
    Get Clbits in condition.

    **Return type**

    `List`\[[`Clbit`](qiskit.circuit.Clbit "qiskit.circuit.classicalregister.Clbit")]
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.TdgGate.decompositions" name="decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.TdgGate.definition" name="definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.TdgGate.duration" name="duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.TdgGate.label" name="label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.TdgGate.name" name="name">
    Return the name.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.TdgGate.num_clbits" name="num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.TdgGate.num_qubits" name="num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.TdgGate.params" name="params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.TdgGate.unit" name="unit">
    Get the time unit of duration.
  </Attribute>
</Class>

